Fixed overlap on single post and single product pages in addition to taking product description off of taxonomy-product-type page

--- a/themes/inhabitent-theme/sass/_archive-product.scss
+++ b/themes/inhabitent-theme/sass/_archive-product.scss
@@ -35,7 +35,6 @@
 	display:flex;
 	flex-direction:row;
 
-
 	.site-main-product {
 		width:1120px;
 	}
@@ -54,6 +53,9 @@
 	.individual-post {
 		flex-basis:25%;
 	}
+	.entry-content p {
+		display:none;
+	}
 }
 .type-product .product-title-price {
 	display:flex;
@@ -62,7 +64,6 @@
     border-top-width: 6px;
     padding: 0px 10px;
     height: 60px;
-    font-family: "merriweatherlight";
 
 	a{
 		text-decoration:none;
