--- a/themes/inhabitent-theme/sass/_taxonomy-product-type.scss
+++ b/themes/inhabitent-theme/sass/_taxonomy-product-type.scss
@@ -18,6 +18,10 @@
 			margin-bottom:10rem;
 			margin-top:2.4rem;
 
+			.entry-content p {
+				display:none;
+			}
+
 		}
 
 		.single-product {
