--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -951,6 +951,15 @@ body .front-page-heading {
   .type-post .entry-header {
     position: relative;
     width: 100%; }
+    .type-post .entry-header .entry-meta {
+      position: absolute;
+      bottom: 7px;
+      right: 0;
+      color: #fff;
+      width: 75%;
+      background: #248a83;
+      text-align: center;
+      text-transform: uppercase; }
     .type-post .entry-header .entry-title {
       position: absolute;
       top: 0px;
@@ -964,16 +973,6 @@ body .front-page-heading {
         color: white;
         text-decoration: none;
         font-size: 2rem; }
-
-.entry-meta {
-  position: absolute;
-  bottom: 7px;
-  right: 0;
-  color: #fff;
-  width: 75%;
-  background: #248a83;
-  text-align: center;
-  text-transform: uppercase; }
 
 .read-more-article {
   border: 1px solid black;
@@ -1089,6 +1088,8 @@ body .front-page-heading {
   .product-post .individual-post {
     -ms-flex-preferred-size: 25%;
         flex-basis: 25%; }
+  .product-post .entry-content p {
+    display: none; }
 
 .type-product .product-title-price {
   display: -ms-flexbox;
@@ -1098,8 +1099,7 @@ body .front-page-heading {
   border: 1px solid #e1e1e1;
   border-top-width: 6px;
   padding: 0px 10px;
-  height: 60px;
-  font-family: "merriweatherlight"; }
+  height: 60px; }
   .type-product .product-title-price a {
     text-decoration: none;
     color: black; }
@@ -1123,6 +1123,8 @@ body .front-page-heading {
     margin: 0 auto;
     margin-bottom: 10rem;
     margin-top: 2.4rem; }
+    .product-type-archive-page .product-type-main .product-grid .entry-content p {
+      display: none; }
   .product-type-archive-page .product-type-main .single-product {
     height: 200px;
     width: 250px;
